# OpenRoIS

./: AGENTS.md  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
docs/: architecture.md  roadmap.md  rois-reference.md  white-paper.md
integration/mock-gateway/: README.md
interfaces/: README.md
interfaces/csharp/: CHANGELOG.md  README.md
interfaces/python/: CHANGELOG.md  README.md  pyproject.toml
interfaces/python/scripts/: export_schema.py
interfaces/python/src/openrois/interfaces/: __init__.py  bus.py  common.py  hri.py  profiles.py  service.py
interfaces/python/src/openrois/interfaces/components/: __init__.py  navigation.py  person_detection.py  system_information.py
interfaces/python/tests/: test_bus.py  test_bus_adapter.py  test_common.py  test_hri.py  test_json_schema_export.py  test_navigation.py  test_person_detection.py  test_profiles.py  test_schema_drift.py  test_service.py  test_system_information.py  test_xml_crosscheck.py  test_xsd_consistency.py
interfaces/schema/: Argument.schema.json  CommandMessageProfile.schema.json  CommandRequest.schema.json  CommandUnit.schema.json  CommandUnitSequence.schema.json  CompletedEvent.schema.json  CompletedStatus.schema.json  ComponentStatus.schema.json  ConcurrentCommands.schema.json  DiscoverRequest.schema.json  DiscoverResponse.schema.json  ErrorType.schema.json  EventEnvelope.schema.json  EventMessageProfile.schema.json  HRIComponentProfile.schema.json  HRIEngineProfileType.schema.json  InvokeResponse.schema.json  MessageProfile.schema.json  NavigationGetParameterResult.schema.json  NavigationReachedTargetEvent.schema.json  NavigationSetParameter.schema.json  NavigationSetParameterResult.schema.json  NavigationStatusResult.schema.json  NotifyErrorEvent.schema.json  NotifyEventPayload.schema.json  Parameter.schema.json  ParameterProfile.schema.json  PersonDetectedEvent.schema.json  PersonDetectionStatusResult.schema.json  QueryMessageProfile.schema.json  QueryRequest.schema.json  QueryResponse.schema.json  Result.schema.json  ReturnCode.schema.json  RoISIdentifierType.schema.json  StreamStatus.schema.json  SubscribeRequest.schema.json  SubscribeResponse.schema.json  SystemInformationEngineStatusResult.schema.json  SystemInformationRobotPositionResult.schema.json  (+1 more)
interfaces/typescript/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
normative/machine-readable/: AudioStreaming.xml  FaceDetection.xml  FaceLocalization.xml  Follow.xml  GestureRecognition.xml  Model.xml  Move.xml  Navigation.xml  OWL.ttl  PersonDetection.xml  PersonIdentification.xml  PersonLocalization.xml  Reaction.xml  RoISCommon.xml  RoIS_Audio_Streaming.hpp  RoIS_Audio_Streaming.idl  RoIS_Common.hpp  RoIS_Common.idl  RoIS_Face_Detection.hpp  RoIS_Face_Detection.idl  RoIS_Face_Localization.hpp  RoIS_Face_Localization.idl  RoIS_Follow.hpp  (+38 more)
sdk-js/: .gitignore  README.md  package-lock.json  package.json
(+33 files in other folders)
