[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openrois-interfaces"
version = "0.1.0a1"
description = "RoIS Framework 2.0 interface types for the OpenRoIS middleware"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "OpenRoIS Community" },
]
keywords = [
    "rois",
    "omg",
    "robotics",
    "hri",
    "webrtc",
    "ros2",
    "avatar",
    "middleware",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Robotics",
]

[project.urls]
Homepage = "https://github.com/openrois/openrois"
Repository = "https://github.com/openrois/openrois"
Changelog = "https://github.com/openrois/openrois/blob/main/interfaces/python/CHANGELOG.md"
"Bug-Tracker" = "https://github.com/openrois/openrois/issues"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.8",
    "ruff>=0.4",
    "jsonschema>=4.21",
    "lxml>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openrois"]
force-include = { "src/openrois/py.typed" = "openrois/py.typed" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
files = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]