[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openrois-interfaces"
version = "0.1.0a1"
description = "RoIS Framework 2.0 interface types for the OpenRoIS middleware"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "OpenRoIS Community" },
]
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Repository = "https://github.com/openrois/openrois"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.8",
    "ruff>=0.4",
    "jsonschema>=4.21",
    "lxml>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openrois"]
force-include = { "src/openrois/py.typed" = "openrois/py.typed" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
files = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]